syntax = "proto3";
package types;

enum PrimitiveType {
    I8 = 0;
    I16 = 1;
    I32 = 2;
    I64 = 3;
    I128 = 4;
    U8 = 5;
    U16 = 6;
    U32 = 7;
    U64 = 8;
    U128 = 9;
    U256 = 10;
    USIZE = 11;
    BOOL = 12;
    FELT252 = 13;
    CLASS_HASH = 14;
    CONTRACT_ADDRESS = 15;
}

message EnumOption {
    string name = 1;
    Ty ty = 2;
}

message Enum {
    string name = 1;
    uint32 option = 2;
    repeated EnumOption options = 3;
}

message Primitive {
    PrimitiveType type = 1;
    Value value = 2;
}

message Struct {
    string name = 1;
    repeated Member children = 2;
}

message Array {
    repeated Ty children = 1;
}

message Ty {
    oneof ty_type {
        Primitive primitive = 2;
        Enum enum = 3;
        Struct struct = 4;
        Array tuple = 5;
        Array array = 6;
        string bytearray = 7;
    }
}

message Member {
    string name = 1;
    Ty ty = 2;
    bool key = 3;
}

message Value {
    oneof value_type {
        string string_value = 2;
        int64 int_value = 3;
        uint64 uint_value = 4;
        bool bool_value = 5;
        bytes byte_value = 6;
    }
}
